--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     },
     "homepage": "https://github.com/saucylegs/deadchatxd#readme",
     "dependencies": {
+        "dblapi.js": "^2.4.1",
         "discord.js": "^12.3.1",
+        "dotenv": "^10.0.0",
         "mysql": "^2.18.1",
-        "dblapi.js": "^2.4.1"
+        "tenorjs": "^1.0.2"
     }
 }
